Tried fixing a bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 */
 
 body {
-  margin: 0;
+  margin: 40;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -17,6 +17,7 @@ code {
 }
 
 body {
+  padding-top: 100px;
   background-color: #1A1E29;
   color: #fff;
 }
